--- a/06_dom/two.html
+++ b/06_dom/two.html
@@ -27,8 +27,10 @@
     //     console.log(parent.lastElementChild);
 
     const dayone = document.querySelector('.day');
-    console.log(dayone);
-    console.log(dayone.parentElement);
-    console.log(dayone.nextElementSibling);
+    // console.log(dayone);
+    // console.log(dayone.parentElement);
+    // console.log(dayone.nextElementSibling);
+
+   console.log("NODES: ", parent.childNodes);
  </script>
 </html>
